# ratatoskr

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile.remote-cpp-systemc-env  LICENSE  README.md  testClient.py
simulator/: CMakeLists.txt  README.md  build.sh
simulator/config/: 2Routers.xml  2mesh.xml  DyXYZ_4x4x4_16B_4VC alt.xml  DyXYZ_4x4x4_16B_4VC.xml  XYZ_4x4x1_4B_4VC.xml  XYZ_4x4x4_16B_4VC.xml  config.xml  data.xml  data1.xml  layer.xsd  map.xml  map1.xml  network.xml  ntConfig.xml  ntNetwork8x4x2.xml  structure.xml  working.xml
simulator/config/example_topolgies/: XYZ_3x3+2x2_16B_4VC.xml  XYZ_4x4x1_32B_4VC.xml  XYZ_4x4x4_16B_4VC.xml
simulator/config/tests/: README.md
simulator/config/tests/0/: config.xml  data.xml  map.xml  network.xml  working.xml
simulator/config/tests/1/: config.xml  data.xml  map.xml  network.xml  working.xml
simulator/config/tests/2/: config.xml  data.xml  map.xml  network.xml
simulator/scripts/: bandwidth.py
simulator/src/: main.cpp
simulator/src/model/: LayerTop.cpp  LayerTop.h  NetworkParticipant.h  NoC.cpp  NoC.h
simulator/src/model/container/: ClassicContainer.h  Container.h  FlitContainer.h  PacketContainer.h
simulator/src/model/layer/: LayerTop.cpp  LayerTop.h
simulator/src/model/link/: Link.cpp  Link.h
simulator/src/model/networkInterface/: NetworkInterface.cpp  NetworkInterface.h  NetworkInterfaceVC.cpp  NetworkInterfaceVC.h
simulator/src/model/processingElement/: ProcessingElement.cpp  ProcessingElement.h  ProcessingElementVC.cpp  ProcessingElementVC.h
simulator/src/model/processingElements/: ProcessingElementVC3D.cpp  ProcessingElementVC3D.h
simulator/src/model/router/: Buffer.cpp  Buffer.h  NewRouterVC.cpp  NewRouterVC.h  Router.cpp  Router.h  RouterVC.cpp  RouterVC.h
simulator/src/model/router/helper/: Helper.cpp  Helper.h  MeshHelper.cpp  MeshHelper.h
simulator/src/model/router/routings/: BaseRouting.cpp  BaseRouting.h  HeteroXYZRouting.cpp  (+22 more)
simulator/src/model/routings/: Routing.h  RoutingDyXYZ.cpp  RoutingDyXYZ.h  RoutingEDXYZ.cpp  RoutingEDXYZ.h  RoutingESPADA.cpp  RoutingESPADA.h  RoutingXYZ.cpp  RoutingXYZ.h
simulator/src/model/selection/: Selection.h  SelectionRoundRobin.h
simulator/src/model/traffic/: Data.cpp  Data.h  Flit.cpp  Flit.h  Packet.cpp  Packet.h  TrafficPool.cpp  TrafficPool.h
simulator/src/traffic/: Flit.cpp  Flit.h  Packet.cpp  Packet.h  TrafficPool.cpp  TrafficPool.h
simulator/src/traffic/netrace/: NetracePacket.h  NetracePool.cpp  NetracePool.h  netrace.cc  netrace.hh  queue.cc  queue.hh
simulator/src/traffic/synthetic/: SyntheticPacket.h  SyntheticPool.cpp  SyntheticPool.h
simulator/src/traffic/tasks/: Task.cpp  Task.h  TaskPacket.h  TaskPool.cpp  TaskPool.h
simulator/src/utils/: GlobalInputClass.cpp  GlobalInputClass.h  GlobalReport.cpp  GlobalReport.h  GlobalReportClass.cpp  GlobalReportClass.h  GlobalResources.cpp  GlobalResources.h  PacketFactory.cpp  PacketFactory.h  Report.cpp  Report.h  Statistics.cpp  Statistics.h  Structures.cpp  Structures.h  TrafficTracer.cpp  TrafficTracer.h  portsOpenConst.h
simulator/tests/2D-4x4/: config.ini  config.xml
simulator/tests/netrace/: .gitignore  run.sh
simulator/tests/netrace/config/: ntConfig-blacksholes.xml  ntConfig.xml
simulator/traffic/example/: singleSender.xml  singleSenderMapping.xml  twoSender.xml  twoSenderMapping.xml
simulator/traffic/pipelinePerformance_2D/: 263dec_mp3dec.xml  263dec_mp3decMapping.xml  263enc_mp3dec.xml  263enc_mp3decMapping.xml  DVOPD.xml  DVOPDMapping.xml  HotSpot.xml  HotSpotMapping.xml  MPEG-4.xml  MPEG-4Mapping.xml  MWD.xml  MWDMapping.xml  PIP.xml  PIPMapping.xml  PipelineResetDirectionTB.xml  PipelineResetDirectionTBMapping.xml  PipelineResetTB.xml  PipelineResetTBMapping.xml  Transpose.xml  TransposeMapping.xml  Uniform.xml  UniformMapping.xml  VOPD.xml  VOPDMapping.xml  VOPD_b.xml  VOPD_bMapping.xml  VOPD_small.xml  VOPreconstruction.xml  mp3enc_mp3dec.xml  mp3enc_mp3decMapping.xml
simulator/traffic/testbenchA3D/: PipelineResetTB.xml  PipelineResetTBMapping.xml
(+480 files in other folders)
